@@ -54,4 +54,5 @@
   <li>Phillip Smith</li>
   <li>Alex Krohn</li>
   <li>Brian Smith</li>
+  <li>David Oliveira</li>
 </ul>
